src/objects/TRAK_Test_Template_Steps__c.object
<CustomObject>
    <description>Business Description: This object is used to record the individual steps of a test template. Test Templates are the master copy of a Test that can be executed many times by different people.

Used In: Release Tracker App</description>
    <fields>
        <fullName>Action__c</fullName>
        <inlineHelpText>The actions needed to perform this test</inlineHelpText>
        <label>Action</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expected_Result__c</fullName>
        <inlineHelpText>The expected result for this step</inlineHelpText>
        <label>Expected Result</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Test_Script_Step_Number__c</fullName>
        <description>TRAK: This field stores the step number of the Test Case Step associated with a Test Script</description>
        <label>Test Script Step Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_Script__c</fullName>
        <label>Test Script</label>
        <referenceTo>TRAK_Test_Templates__c</referenceTo>
        <relationshipLabel>Test Script Steps</relationshipLabel>
        <relationshipName>TRAK_Test_Script_Steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Tips__c</fullName>
        <inlineHelpText>Hints and Tips for this step</inlineHelpText>
        <label>Tips</label>
        <type>TextArea</type>
    </fields>
    <label>Test Script Step</label>
    <nameField>
        <displayFormat>TSS-{000000}</displayFormat>
        <label>Test Script Step Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Script Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>TRAK_PreventFromEditStepsUntilApproved</fullName>
        <active>true</active>
        <description>TRAK - This validation rule will prevent the user from creating/editing Test  Step record if the Test Script is in an &quot;Pending Approval&quot; status</description>
        <errorConditionFormula>ISPICKVAL( Test_Script__r.Approval_Status__c , &apos;Pending Approval&apos;)</errorConditionFormula>
        <errorMessage>You cannot Create / Edit a Test Script Step if the Test Script is Pending Approval.</errorMessage>
    </validationRules>
</CustomObject>